--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,25 @@
+Cartridge==0.9.5
+Django==1.6.11
 Mezzanine==3.1.10
+Pillow==2.8.1
+PyPDF2==1.24
+South==1.0.2
+argparse==1.2.1
+beautifulsoup4==4.1.3
+bleach==1.4.1
+django-typogrify==1.3.1
+filebrowser-safe==0.3.8
+future==0.9.0
+grappelli-safe==0.3.13
+html5lib==0.999
+oauthlib==0.7.2
+psycopg2==2.6
+pytz==2015.2
+reportlab==3.1.44
+requests==2.6.2
+requests-oauthlib==0.4.2
+six==1.9.0
+smartypants==1.8.6
+tzlocal==1.0
+wsgiref==0.1.2
+xhtml2pdf==0.0.6
